# ease100

./: CHANGELOG.md  README.md  ase100cco.cabal  consts.e  dtest.e  dtest.labels  dtest.mif  dtest.x.e  ease100.cabal  extra.e  test.e  test.labels  test.mif
app/: Main.hs  Parser.hs
test/: consts.e  cross.e  dtest.e
